@@ -1,5 +1,6 @@
 package com.expense.tracker;
 
+import java.awt.FlowLayout;
 import java.io.*;
 import java.time.*;
 import java.util.*;
@@ -8,24 +9,43 @@ import java.util.stream.Collectors;
 public class ExpenseServiceImpl implements ExpenseService {
 
 	private final List<Expense> expenses = new ArrayList<>();
-	private static final Map<Month, Double> monthlyBudgets = new HashMap<>();
+	private static final Map<YearMonth, Double> monthlyBudgets = new HashMap<>();
+	private final Scanner scanner;
+
+	public ExpenseServiceImpl(Scanner scanner) {
+		this.scanner = scanner;
+	}
 
 	@Override
-	public void addExpense(Scanner scanner) {
+	public void addExpense() {
 
-		System.out.println("Enter expense description: ");
-		String description = scanner.nextLine().trim();
+		try {
+			String description = readString("Enter expense description: ");
+			double amount = readDouble("Enter expense amount: ");
+			String category = readString("Enter category: ");
+			LocalDate date = LocalDate.now();
+			YearMonth currentMonth = YearMonth.from(date);
 
-		System.out.print("Enter expense amount: ");
-		double amount = scanner.nextDouble();
-		scanner.nextLine();
+			double currentTotal = expenses.stream().filter(e -> YearMonth.from(e.getDate()).equals(currentMonth))
+					.mapToDouble(Expense::getAmount).sum();
 
-		System.out.println("Enter category (e.g., Food, Travel, Bills, Shopping): ");
-		String category = scanner.nextLine();
+			double monthlyBudget = monthlyBudgets.getOrDefault(currentMonth, Double.MAX_VALUE);
+			if (monthlyBudgets.containsKey(currentMonth) && currentTotal + amount > monthlyBudget) {
+				System.out.printf("Warning: Adding this expense (Rs.%.2f) will exceed your budget of Rs.%.2f%n", amount,
+						monthlyBudget);
+				String choice = readString("Do you still want to continue? (yes/no): ").toLowerCase();
+				if (!choice.equals("yes")) {
+					System.out.println("Expense not added.");
+					return;
+				}
+			}
 
-		Expense newExpenses = new Expense(description, amount, category);
-		expenses.add(newExpenses);
-		System.out.println("Expense added successfully!");
+			Expense newExpenses = new Expense(description, amount, category, date);
+			expenses.add(newExpenses);
+			System.out.println("Expense added successfully!");
+		} catch (Exception e) {
+			System.out.println("Error adding expense: " + e.getMessage());
+		}
 
 	}
 
@@ -35,50 +55,72 @@ public class ExpenseServiceImpl implements ExpenseService {
 			System.out.println("No expenses added yet");
 			return;
 		}
+		printExpenseTable(expenses);
 
-		System.out.println("\n================================================================");
-		System.out.println(
-				String.format("%-5s %-12s %-20s %-15s %-10s", "ID", "Date", "Description", "Category", "Amount"));
-		System.out.println("==================================================================");
-
-		int id = 1;
-		for (Expense e : expenses) {
-			System.out.println(String.format("%-5d %-12s %-20s %-15s Rs.%.2f", id++, e.getDate(), e.getDescription(),
-					e.getCategory(), e.getAmount()));
-		}
-
-		System.out.println("==================================================================");
 	}
 
 	@Override
-	public void deleteExpense(Scanner scanner) {
+	public void updateExpense() {
+		if (expenses.isEmpty()) {
+			System.out.println(" No expenses to update.");
+			return;
+		}
+
+		String searchDescription = readString("Enter the description of the expense to update: ");
+		List<Expense> matched = expenses.stream().filter(e -> e.getDescription().equalsIgnoreCase(searchDescription))
+				.collect(Collectors.toList());
+
+		if (matched.isEmpty()) {
+			System.out.println(" No expenses found with description: " + searchDescription);
+			return;
+		}
+
+		Expense expenseToUpdate;
+
+		if (matched.size() == 1) {
+			expenseToUpdate = matched.get(0);
+		} else {
+			System.out.println("\nMultiple expenses found with that description:\n");
+			printExpenseTable(matched);
+			int id = readInt("Enter the ID of the expense to update: ");
+			expenseToUpdate = findExpenseById(id);
+			if (expenseToUpdate == null) {
+				System.out.println("Invalid ID selected. No expense updated.");
+				return;
+			}
+		}
+
+		String newDesc = readString("Enter new description (leave blank to keep same): ");
+		double newAmount = readDoubleOptional("Enter new amount (or -1 to keep same): ");
+		String newCategory = readString("Enter new category (leave blank to keep same): ");
+
+		if (!newDesc.isEmpty())
+			expenseToUpdate.setDescription(newDesc);
+		if (newAmount >= 0)
+			expenseToUpdate.setAmount(newAmount);
+		if (!newCategory.isEmpty())
+			expenseToUpdate.setCategory(newCategory);
+
+		System.out.println("Expense updated successfully!");
+	}
+
+	@Override
+	public void deleteExpense() {
 		if (expenses.isEmpty()) {
 			System.out.println("No expenses to delete.");
 			return;
 		}
 
-		System.out.println("\nYour Expenses:");
-		for (int i = 0; i < expenses.size(); i++) {
-			Expense e = expenses.get(i);
-			System.out.printf("%d. %s 	| Rs.%.2f 	| %s%n", i + 1, e.getDescription(), e.getAmount(), e.getDate());
-		}
+		printExpenseTable(expenses);
 
-		System.out.print("\nEnter the id of the expense you want to delete: ");
-		int choice;
-		try {
-			choice = Integer.parseInt(scanner.nextLine().trim());
-		} catch (NumberFormatException e) {
-			System.out.println("Invalid input. Please enter a valid number.");
-			return;
+		int id = readInt("Enter the ID of the expense to delete: ");
+		Expense toRemove = findExpenseById(id);
+		if (toRemove != null) {
+			expenses.remove(toRemove);
+			System.out.printf("Expense '%s' deleted successfully!%n", toRemove.getDescription());
+		} else {
+			System.out.println("Expense with the given ID not found.");
 		}
-
-		if (choice < 1 || choice > expenses.size()) {
-			System.out.println("Invalid selection. Please choose a number between 1 and " + expenses.size());
-			return;
-		}
-
-		Expense removed = expenses.remove(choice - 1);
-		System.out.printf("Expense '%s' deleted successfully!%n", removed.getDescription());
 	}
 
 	@Override
@@ -94,163 +136,57 @@ public class ExpenseServiceImpl implements ExpenseService {
 	}
 
 	@Override
-	public void viewSummaryByMonth(Scanner scanner) {
+	public void viewSummaryByMonth() {
 		if (expenses.isEmpty()) {
 			System.out.println("No expenses recorded.");
 			return;
 		}
 
-		System.out.print("Enter month number (1 to 12): ");
-		int monthNumber = scanner.nextInt();
-		scanner.nextLine();
-
-		if (monthNumber < 1 || monthNumber > 12) {
-			System.out.println("Invalid month number.");
-			return;
-		}
-
-		Month month = Month.of(monthNumber);
-		int currentYear = LocalDate.now().getYear();
+		int month = readInt("enter Month (1-12): ", 1, 12);
+		int year = readInt("Enter year (e.g., 2025): ", 1900, 3000);
 
 		List<Expense> monthly = expenses.stream()
-				.filter(e -> e.getDate().getMonth() == month && e.getDate().getYear() == currentYear)
+				.filter(e -> e.getDate().getMonthValue() == month && e.getDate().getYear() == year)
 				.collect(Collectors.toList());
 
 		if (monthly.isEmpty()) {
-			System.out.printf("No expenses found for %s %d%n", month, currentYear);
+			 System.out.printf("No expenses found for %02d-%d%n", month, year);
 			return;
 		}
 
 		double total = monthly.stream().mapToDouble(Expense::getAmount).sum();
-		System.out.printf("Total expenses for %s: Rs.%.2f", month, total);
+	    System.out.printf("Total expenses for %02d-%d: Rs.%.2f%n", month, year, total);
 	}
 
 	@Override
-	public void updateExpense(Scanner scanner) {
-		if (expenses.isEmpty()) {
-			System.out.println(" No expenses to update.");
-			return;
-		}
-
-		System.out.print("Enter the description of the expense you want to update: ");
-		String searchDescription = scanner.nextLine().trim();
-
-		List<Expense> matched = new ArrayList<>();
-		for (Expense e : expenses) {
-			if (e.getDescription().equalsIgnoreCase(searchDescription)) {
-				matched.add(e);
-			}
-		}
-
-		if (matched.isEmpty()) {
-			System.out.println(" No expenses found with description: " + searchDescription);
-			return;
-		}
-
-		Expense expenseToUpdate;
-
-		if (matched.size() == 1) {
-			expenseToUpdate = matched.get(0);
-		} else {
-			System.out.println("\nMultiple expenses found with that description:\n");
-			System.out.println("--------------------------------------------------------------");
-			System.out.printf("%-5s %-12s %-20s %-15s %-10s%n", "ID", "Date", "Description", "Category", "Amount");
-			System.out.println("--------------------------------------------------------------");
-
-			for (int i = 0; i < matched.size(); i++) {
-				Expense e = matched.get(i);
-				System.out.printf("%-5d %-12s %-20s %-15s  Rs.%.2f\n", (i + 1), e.getDate(), e.getDescription(),
-						e.getCategory(), e.getAmount());
-			}
-
-			System.out.println("--------------------------------------------------------------");
-			System.out.print("Enter the ID of the expense you want to update: ");
-			while (!scanner.hasNextInt()) {
-				System.out.print(" Please enter a valid numeric ID: ");
-				scanner.next();
-			}
-
-			int id = scanner.nextInt();
-			scanner.nextLine();
-
-			if (id < 1 || id > matched.size()) {
-				System.out.println("Invalid ID selected. No expense updated.");
-				return;
-			}
-			expenseToUpdate = matched.get(id - 1);
-		}
-
-		System.out.print("Enter new description (leave blank to keep same): ");
-		String newDesc = scanner.nextLine().trim();
-
-		System.out.print("Enter new amount (or -1 to keep same): ");
-		while (!scanner.hasNextDouble()) {
-			System.out.print(" Please enter a valid number for amount: ");
-			scanner.next();
-		}
-		double newAmount = scanner.nextDouble();
-		scanner.nextLine();
-
-		System.out.print("Enter new category (leave blank to keep same): ");
-		String newCategory = scanner.nextLine().trim();
-
-		if (!newDesc.isEmpty()) {
-			expenseToUpdate.setDescription(newDesc);
-		}
-		if (newAmount >= 0) {
-			expenseToUpdate.setAmount(newAmount);
-		}
-		if (!newCategory.isEmpty()) {
-			expenseToUpdate.setCategory(newCategory);
-		}
-
-		System.out.println("Expense updated successfully!");
-	}
-
-	@Override
-	public void filterByCategory(Scanner scanner) {
+	public void filterByCategory() {
 		if (expenses.isEmpty()) {
 			System.out.println("No expenses available.");
 			return;
 		}
 
-		System.out.print("Enter category to filter by: ");
-		String category = scanner.nextLine().trim();
-
-		List<Expense> filtered = expenses.stream().filter(e -> e.getCategory().equalsIgnoreCase(category)).toList();
+		String category = readString("Enter category to filter by: ");
+		List<Expense> filtered = expenses.stream().filter(e -> e.getCategory().equalsIgnoreCase(category))
+				.collect(Collectors.toList());
 
 		if (filtered.isEmpty()) {
 			System.out.println("No expenses found in category '" + category + "'.");
 			return;
 		}
 
-		System.out.println("\nExpenses in category '" + category + "':\n");
-		System.out.println("--------------------------------------------------------------");
-		System.out.printf("%-5s %-12s %-20s %-15s %-10s%n", "ID", "Date", "Description", "Category", "Amount");
-		System.out.println("--------------------------------------------------------------");
-
-		for (Expense e : filtered) {
-			System.out.printf("%-5d %-12s %-20s %-15s Rs.%-10.2f%n", e.getId(), e.getDate(), e.getDescription(),
-					e.getCategory(), e.getAmount());
-		}
-
-		System.out.println("--------------------------------------------------------------");
-
+		printExpenseTable(filtered);
 	}
 
 	@Override
-	public void setMonthlyBudget(Scanner scanner) {
-		System.out.println("Enter month number (1-12) to set budget for: ");
-		int monthNum = scanner.nextInt();
-		scanner.nextLine();
-		Month month = Month.of(monthNum);
+	public void setMonthlyBudget() {
+		int month = readInt("Enter month (1-12): ", 1, 12);
+		int year = readInt("\"Enter year (e.g., 2025): ", 1900, 3000);
+		double amount = readDouble("Entet budget amount: ");
 
-		System.out.println("Enter budget amount: ");
-		double budget = scanner.nextDouble();
-		scanner.nextLine();
+		YearMonth ym = YearMonth.of(year, month);
+		monthlyBudgets.put(ym, amount);
 
-		monthlyBudgets.put(month, budget);
-		System.out.println("Budget set for " + month + ": Rs." + budget);
+		System.out.printf(" Monthly budget set: Rs.%.2f for %s%n", amount, ym);
 
 	}
 
@@ -262,7 +198,7 @@ public class ExpenseServiceImpl implements ExpenseService {
 		}
 
 		try (FileWriter writer = new FileWriter("expenses.csv")) {
-			writer.write("Description,Amount,Category,Date\\n");
+			writer.write("Description,Amount,Category,Date\n");
 			for (Expense e : expenses) {
 				writer.write(String.format("%s,Rs.%.2f,%s,%s\n", e.getDescription(), e.getAmount(), e.getCategory(),
 						e.getDate()));
@@ -273,19 +209,81 @@ public class ExpenseServiceImpl implements ExpenseService {
 		}
 	}
 
-	@Override
-	public void checkBudgetExceeded(Expense expense) {
-		Month month = expense.getDate().getMonth();
-		if (monthlyBudgets.containsKey(month)) {
-			double budget = monthlyBudgets.get(month);
-			double totalThisMonth = expenses.stream().filter(e -> e.getDate().getMonth() == month)
-					.mapToDouble(Expense::getAmount).sum();
+//	Helper methods
 
-			if (totalThisMonth > budget) {
-				System.out.println("Budget exceeded for " + month + "! (Rs" + totalThisMonth + " / Rs" + budget + ")");
+	private double readDouble(String prompt) {
+		while (true) {
+			System.out.print(prompt);
+			try {
+				double value = Double.parseDouble(scanner.nextLine().trim());
+				if (value < 0)
+					throw new NumberFormatException();
+				return value;
+			} catch (NumberFormatException e) {
+				System.out.println("Invalid input. Please enter a positive number.");
 			}
 		}
 
+	}
+
+	private String readString(String prompt) {
+		System.out.print(prompt);
+		return scanner.nextLine().trim();
+	}
+
+	private void printExpenseTable(List<Expense> list) {
+		System.out.println("--------------------------------------------------------------");
+		System.out.printf("%-5s %-12s %-20s %-15s %-10s%n", "ID", "Date", "Description", "Category", "Amount");
+		System.out.println("--------------------------------------------------------------");
+		for (Expense e : list) {
+			System.out.printf("%-5d %-12s %-20s %-15s Rs.%-10.2f%n", e.getId(), e.getDate(), e.getDescription(),
+					e.getCategory(), e.getAmount());
+		}
+		System.out.println("--------------------------------------------------------------");
+	}
+
+	private Expense findExpenseById(int id) {
+		return expenses.stream().filter(e -> e.getId() == id).findFirst().orElse(null);
+	}
+
+	private int readInt(String prompt) {
+		while (true) {
+			System.out.print(prompt);
+			try {
+				return Integer.parseInt(scanner.nextLine().trim());
+			} catch (NumberFormatException e) {
+				System.out.println("Invalid input. Please enter an integer.");
+			}
+		}
+
+	}
+
+	private double readDoubleOptional(String prompt) {
+		while (true) {
+			System.out.println(prompt);
+			try {
+				double value = Double.parseDouble(scanner.nextLine().trim());
+				return value;
+			} catch (NumberFormatException e) {
+				System.out.println("Invalid input. Please enter a number.");
+			}
+		}
+
+	}
+
+	private int readInt(String prompt, int min, int max) {
+		while (true) {
+			System.out.print(prompt);
+			String input = scanner.nextLine().trim();
+			try {
+				int value = Integer.parseInt(input);
+				if (value >= min && value <= max)
+					return value;
+				System.out.printf("Please enter a number between %d and %d.%n", min, max);
+			} catch (NumberFormatException e) {
+				System.out.println("Invalid input. Please enter a number.");
+			}
+		}
 	}
 
 }
